test_suite/tests/ui/conflict/flatten-skip-deserializing.stderr
error: #[serde(flatten)] can not be combined with #[serde(skip_deserializing)]
 --> $DIR/flatten-skip-deserializing.rs:6:5
  |
6 | /     #[serde(flatten, skip_deserializing)]
7 | |     other: Other,
  | |________________^

error: aborting due to previous error

